infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customapp-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: generatedata.sherpaanalytics.ai
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 80
